zero-trust-security-entornos-devops/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zero-trust-demo
  labels:
    name: zero-trust-demo
