zero-trust-security-entornos-devops/manifests/04-allow-frontend-to-backend.yaml
# Microsegmentacion: solo el frontend puede iniciar conexiones al backend,
# y solo por el puerto 80. Ningun otro pod (ni siquiera "database") puede
# hablarle al backend.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: zero-trust-demo
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 80
---
# Espejo en egress: el frontend solo puede salir hacia el backend.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress-to-backend
  namespace: zero-trust-demo
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
      ports:
        - protocol: TCP
          port: 80
